k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigdata-ingress
  namespace: bigdata
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: jupyter.bigdata.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark
                port:
                  number: 8888
    - host: hdfs.bigdata.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: namenode
                port:
                  number: 9870
    - host: yarn.bigdata.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resourcemanager
                port:
                  number: 8088
    - host: thrift.bigdata.local
      http:
        paths:
          - path: /cliservice
            pathType: Prefix
            backend:
              service:
                name: spark
                port:
                  number: 10001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress.bigdata.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thrift-ingress
  namespace: bigdata
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: thrift.bigdata.local
      http:
        paths:
          - path: /cliservice
            pathType: ImplementationSpecific
            backend:
              service:
                name: spark
                port:
                  number: 10001
